<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp" />

    <GridLayout
        
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:orientation="horizontal" >

        <Space
            android:id="@+id/Space1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal" />

        <Space
            android:id="@+id/Space2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <EditText
            android:id="@+id/etResult"
            android:layout_width="188dp"
            android:layout_column="1"
            android:layout_columnSpan="5"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:ems="10"
            android:cursorVisible="false"
            android:gravity="right"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="5"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btnPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="5"
            android:layout_gravity="left"
            android:layout_row="3"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnEqual"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_gravity="left|fill_vertical"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:text="@string/equal" />

        <Button
            android:id="@+id/btnNine"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btnSix"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/six" />

        <Button
            android:id="@+id/btnOne"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="4"
            android:text="@string/one" />

        <Button
            android:id="@+id/btnFour"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="3"
            android:text="@string/four" />

        <Button
            android:id="@+id/btnDelete"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnFive"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="2"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="3"
            android:text="@string/five" />

        <Button
            android:id="@+id/btnEight"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btnTwo"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="@string/two" />

        <Button
            android:id="@+id/btnThree"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="@string/three" />

        <Button
            android:id="@+id/btnPeriod"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:text="@string/period" />

        <Button
            android:id="@+id/btnZero"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:layout_row="5"
            android:layout_rowSpan="2"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btnSeven"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btnDivide"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/divide" />

        <Button
            android:id="@+id/btnMultiply"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/multiply" />
    </GridLayout>

</LinearLayout>